new header style for desktop; new fonts

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap"
     rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=PT+Serif:wght@400;700&family=Playfair+Display:wght@400;500;600;700;900&display=swap"
+    rel="stylesheet">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
   <link href="./css/bootstrap.min.css" rel="stylesheet">
 
@@ -41,39 +44,43 @@
 <body class="body">
   <!-- HEADER -->
   <header style="position: relative;">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#">Home</a> -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link active" href="/">Prettylook.pl</a> <!-- Główna -->
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/gallery.html">Galeria</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/offer.html">Oferta</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Kontakt</a>
-            </li>
-          </ul>
-          <hr class="site-menu-line">
+    <nav class="navbar navbar-expand-md navbar-light">
+      <div class="container container-fluid w-100 d-block">
+        <div class="row w-100">
+          <div class="col-xs-6 col-sm-4 col-md-2 ps-1">
+            <a class="navbar-brand nav-link nav-link-main active" href="/index.html">PRETTYLOOK.PL</a>
+          </div>
+          <div class="col-xs-6 col-sm-8 col-md-10 pe-0">
+            <div class="top-menu">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mb-md-0">
+                  <li class="nav-item">
+                    <a class="nav-link p-0" href="/gallery.html">GALERIA</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link p-0" href="/offer.html">OFERTA</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link p-0" href="/contact.html">KONTAKT</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
-    <a href="/">
+    <!-- <a href="/">
       <h1 class="site-title">
-        Konstantyn Malczewski
+        PrettyLook.pl
         <hr class="site-title-line">
-        Photography
+        Konstantyn Malczewski Photography
       </h1>
-    </a>
+    </a> -->
   </header>
 
   <!-- PAGE CONTENT -->
