--- a/offer.html
+++ b/offer.html
@@ -15,6 +15,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap"
     rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=PT+Serif:wght@400;700&family=Playfair+Display:wght@400;500;600;700;900&display=swap"
+    rel="stylesheet">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
   <link href="./css/bootstrap.min.css" rel="stylesheet">
 
@@ -41,40 +44,44 @@
 <body class="body">
 
   <!-- HEADER -->
-  <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#">Home</a> -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Prettylook.pl</a> <!-- Główna -->
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/gallery.html">Galeria</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/offer.html">Oferta</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Kontakt</a>
-            </li>
-          </ul>
-          <hr class="site-menu-line">
+  <header style="position: relative;">
+    <nav class="navbar navbar-expand-md navbar-light">
+      <div class="container container-fluid w-100 d-block">
+        <div class="row w-100">
+          <div class="col-xs-6 col-sm-4 col-md-2 ps-1">
+            <a class="navbar-brand nav-link nav-link-main active" href="/index.html">PRETTYLOOK.PL</a>
+          </div>
+          <div class="col-xs-6 col-sm-8 col-md-10 pe-0">
+            <div class="top-menu">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mb-md-0">
+                  <li class="nav-item">
+                    <a class="nav-link p-0" href="/gallery.html">GALERIA</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active p-0" href="/offer.html">OFERTA</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link p-0" href="/contact.html">KONTAKT</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
-    <a href="/">
+    <!-- <a href="/">
       <h1 class="site-title">
-        Konstantyn Malczewski
+        PrettyLook.pl
         <hr class="site-title-line">
-        Photography
+        Konstantyn Malczewski Photography
       </h1>
-    </a>
+    </a> -->
   </header>
 
   <!-- PAGE CONTENT -->
@@ -124,8 +131,15 @@
                     </em>
                   </section>
                   <section class="mt-3">
-                    <p class="text">Część! Mam na imię Konstantyn, jestem fotografem i moja specjalizacja - fotografia ślubna, okolicznościowa i wizerunkowa. Zajmuje się fotografią od lat, mam rozsądne ceny i podchodzę do każdej sesji fotograficznej indywidualnie. Zadzwoń i razem ustalimy szczegóły i cenę sesji zdjęciowej.</p>
-                    <p class="text">Przed sesją razem ustalamy ogólny styl przyszłych zdjęć. Zależy mi na tym, żeby uchwycić najlepsze momenty, żeby model była wyluzowana i miała dobry humor :) Jeśli to nie jest sesja reportażowa, to w czasie fotografowania kieruje procesem sesji: wskazuje gdzie wstać/usiąść/położyć się, jak trzymać ręce, głowę i tak dalej. Albo nawet mówię co robić - skakać, biec czy śmiać się :)</p>
+                    <p class="text">Część! Mam na imię Konstantyn, jestem fotografem i moja specjalizacja - fotografia
+                      ślubna, okolicznościowa i wizerunkowa. Zajmuje się fotografią od lat, mam rozsądne ceny i
+                      podchodzę do każdej sesji fotograficznej indywidualnie. Zadzwoń i razem ustalimy szczegóły i cenę
+                      sesji zdjęciowej.</p>
+                    <p class="text">Przed sesją razem ustalamy ogólny styl przyszłych zdjęć. Zależy mi na tym, żeby
+                      uchwycić najlepsze momenty, żeby model była wyluzowana i miała dobry humor :) Jeśli to nie jest
+                      sesja reportażowa, to w czasie fotografowania kieruje procesem sesji: wskazuje gdzie
+                      wstać/usiąść/położyć się, jak trzymać ręce, głowę i tak dalej. Albo nawet mówię co robić - skakać,
+                      biec czy śmiać się :)</p>
 
                     <h4 class="text-sub-heading mb-3 mt-4">Moja oferta:</h4>
 
@@ -153,7 +167,11 @@
                   <section>
                     <div class="row">
                       <div class="col-12 col-lg-6">
-                        <p class="text">Co uważam za gotowe zdjęcie? To jest udany portret jednej lub kilku osób, poddany odpowiednio pasującej obróbce cyfrowej (ustawienie jasności, ostrości, kolorów, światła i cieni, balansu bieli). Obróbka jest potrzebna po to, żeby ulepszyć i podkreślić zdjęcie "surowe" z aparatu. Kilka zdjęć obrabiam dodatkowo z użyciem ciekawych efektów - imitacji różnych rodzajów fotografii analogowej.</p>
+                        <p class="text">Co uważam za gotowe zdjęcie? To jest udany portret jednej lub kilku osób,
+                          poddany odpowiednio pasującej obróbce cyfrowej (ustawienie jasności, ostrości, kolorów,
+                          światła i cieni, balansu bieli). Obróbka jest potrzebna po to, żeby ulepszyć i podkreślić
+                          zdjęcie "surowe" z aparatu. Kilka zdjęć obrabiam dodatkowo z użyciem ciekawych efektów -
+                          imitacji różnych rodzajów fotografii analogowej.</p>
                         <p class="text">Jestem też otwarty na ciekawe projekty na warunkach TFP - napisz, jeśli masz
                           kreatywne
                           pomysły</p>
