add weselezklasa logo, change footer to light

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 mt-3 mt-md-5">
-            <div class="info-card ps-4 pe-4 pt-4 pb-4 text-start">
+            <div class="info-card ps-4 pe-4 pt-4 pb-1 text-start">
               <h2 class="contact-heading">Zapraszam do kontaktu :)</h2>
               <address>
                 <p class="mb-4 mt-5 pt-1">
@@ -139,6 +139,12 @@
                 </p>
               </address>
             </div>
+            <div class="info-card pb-5">
+              <a class="link" href="https://www.weselezklasa.pl/ogloszenia-weselne/fotografia-slubna-lodz-warszawa-i-cala-polska,50299/" target="_blank" title="Prettylook • Fotografia ślubna • Konstantyn Malczewski">
+                <img src="https://www.weselezklasa.pl/banery/Weselezklasa/logo128x128przezroczystetlobordowe.png" alt="Prettylook • Fotografia ślubna • Konstantyn Malczewski" border="0" />
+                <p class="pt-2 link d-block text-small">Wesele z klasą</p>
+              </a>
+            </div>
           </div>
         </div>
       </div> <!-- /.container -->
@@ -146,7 +152,7 @@
   </main>
 
   <!-- FOOTER -->
-  <footer class="bg-dark site-footer">
+  <footer class=" site-footer">
 
     <!-- Container for visitors counter -->
     <section class="counter-container">
