--- a/gallery.html
+++ b/gallery.html
@@ -629,7 +629,7 @@
   </main>
 
   <!-- FOOTER -->
-  <footer class="bg-dark site-footer">
+  <footer class="site-footer">
 
     <!-- Container for visitors counter -->
     <section class="counter-container">
