--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   </main>
 
   <!-- FOOTER -->
-  <footer class="bg-dark site-footer">
+  <footer class="site-footer">
 
     <!-- Container for visitors counter -->
     <section class="counter-container">
