--- a/gallery.html
+++ b/gallery.html
@@ -88,7 +88,7 @@
 
     <!-- GALLERIES -->
 
-    <div id="wedding" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel" data-bs-interval="5000">
+    <div id="wedding" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
       <div class="carousel-inner container">
         <div class="carousel-item active">
