comment unwanted galleries

--- a/gallery.html
+++ b/gallery.html
@@ -282,7 +282,7 @@
       <h2 class="gallery-heading">Rodzina</h2>
     </div>
 
-    <div id="lifestyle" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel"
+    <!-- <div id="lifestyle" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel"
       data-bs-interval="8000">
       <div class="carousel-inner container">
 
@@ -374,7 +374,7 @@
         </button>
       </div>
       <h2 class="gallery-heading">Lifestyle</h2>
-    </div>
+    </div> -->
 
     <div id="locations" class="carousel slide" style="margin-top: 60px;" data-bs-ride="carousel"
       data-bs-interval="5000">
@@ -494,7 +494,7 @@
       <h2 class="gallery-heading">Lokacje</h2>
     </div>
 
-    <div id="studio" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel" data-bs-interval="6000">
+    <!-- <div id="studio" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel" data-bs-interval="6000">
       <div class="carousel-inner container">
 
         <div class="carousel-item active">
@@ -625,7 +625,7 @@
         </button>
       </div>
       <h2 class="gallery-heading">Studio</h2>
-    </div>
+    </div> -->
   </main>
 
   <!-- FOOTER -->
