gallery heading change

--- a/gallery.html
+++ b/gallery.html
@@ -491,7 +491,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <h2 class="gallery-heading">Lokacje</h2>
+      <h2 class="gallery-heading">Sesje</h2>
     </div>
 
     <!-- <div id="studio" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel" data-bs-interval="6000">
