change square images to wedding ones

--- a/index.html
+++ b/index.html
@@ -101,82 +101,82 @@
 
         <!-- MAIN PAGE IMAGES -->
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#locations">
-            <img class="img-fluid" src="./images/squares/DSC_0921-1s.jpg" unselectable="on">
+          <a href="/gallery.html#wedding">
+            <img class="img-fluid" src="./images/squares/Wedding01.jpg" unselectable="on">
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#studio"><img class="img-fluid" src="./images/squares/DSC_0039-23s.jpg">
+          <a href="/gallery.html#wedding"><img class="img-fluid" src="./images/squares/Wedding13.jpg">
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_0104-1nikon_offs.jpg">
-          </a>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_0420-1s.jpg">
-          </a>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#family"> <img class="img-fluid" src="./images/squares/DSC_0209s.jpg">
-          </a>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#lifestyle"> <img class="img-fluid" src="./images/squares/F10000321_rets.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/Wedding09.jpg">
           </a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/Photoset Natasha012s.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/Wedding29.jpg">
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/DSC_9663fs.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/Wedding06.jpg">
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#lifestyle"> <img class="img-fluid"
-              src="./images/squares/DSC_0708_1_ретушь2_filtereds.jpg">
-          </a>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_0456-11s.jpg">
-          </a>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_0585-1s.jpg">
-          </a>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/Photoset Natasha057s.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/Wedding27.jpg">
           </a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/DSC_0167jpg_filtered_s.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/Wedding25.jpg">
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#family"> <img class="img-fluid" src="./images/squares/DSC_2689s.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/DSC_1809ret_logo square.jpg">
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_1447-1s.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid"
+              src="./images/squares/Wedding23.jpg">
           </a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/DSC_2327bws.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/DSC_4590ret2 square.jpg">
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/DSC_0034s.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/Wedding03.jpg">
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <a href="/gallery.html#lifestyle"> <img class="img-fluid" src="./images/squares/DSC_0278-1_ret2s.jpg">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/Wedding17.jpg">
+          </a>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/DSC_4153ret square.jpg">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/DSC_4532ret square.jpg">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/DSC_4544ret square.jpg">
+          </a>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/DSC_1646bw2 square.jpg">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/DSC_1728film square.jpg">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#wedding"> <img class="img-fluid" src="./images/squares/DSC_2064bw square.jpg">
           </a>
         </div>
 
