add croped images to index page

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 
         <!-- CROPED IMAGES TOP -->
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid image-blured" src="./images/squares/croped12.jpg">
+          <img class="img-fluid image-blured" src="./images/squares/Wedding28 crop.jpg">
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4 d-none d-sm-block">
-          <img class="img-fluid image-blured" src="./images/squares/croped22.jpg">
+          <img class="img-fluid image-blured" src="./images/squares/Wedding10 wedding.jpg">
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4 d-none d-md-block">
-          <img class="img-fluid image-blured" src="./images/squares/croped42.jpg">
+          <img class="img-fluid image-blured" src="./images/squares/Wedding04 crop.jpg">
         </div>
 
         <!-- MAIN PAGE IMAGES -->
@@ -182,13 +182,13 @@
 
         <!-- CROPED IMAGES BOTTOM -->
         <div class="col-xs-12 col-sm-6 col-md-4">
-          <img class="img-fluid image-blured" src="./images/squares/croped5.jpg">
+          <img class="img-fluid image-blured" src="./images/squares/Wedding15 crop.jpg">
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 d-none d-sm-block">
-          <img class="img-fluid image-blured" src="./images/squares/croped8.jpg">
+          <img class="img-fluid image-blured" src="./images/squares/Wedding20 crop.jpg">
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 d-none d-md-block">
-          <img class="img-fluid image-blured" src="./images/squares/croped6.jpg">
+          <img class="img-fluid image-blured" src="./images/squares/Wedding17 crop.jpg">
         </div>
 
         <div class="position-relative">
