wedding gallery images replacement

--- a/gallery.html
+++ b/gallery.html
@@ -93,62 +93,117 @@
       <div class="carousel-inner container">
         <div class="carousel-item active">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_0814.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 01.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_0379.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 40.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_0398.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 33.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_4564ret.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 45.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_0437bw.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 44.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_4153ret.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 43.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_0459.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 46.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_0470.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 52.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_0565sep.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 51.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_4165-2ret.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 50.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/DSC_4590ret2.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 49.jpg">
           </div>
         </div>
         <div class="carousel-item">
           <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/wedding/Игорь и Вика 25b&w1.jpg">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 48.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 11.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 13.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 14.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 16.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 18.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 34.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 08.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 24.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 06.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 30.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/wedding/Wedding optimized 30.jpg">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#wedding" data-bs-slide="prev">
@@ -376,7 +431,7 @@
       <h2 class="gallery-heading">Lifestyle</h2>
     </div> -->
 
-    <div id="locations" class="carousel slide" style="margin-top: 60px;" data-bs-ride="carousel"
+    <div id="locations" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel"
       data-bs-interval="5000">
 
       <div class="carousel-inner container">
