gallery style fixes

--- a/gallery.html
+++ b/gallery.html
@@ -334,7 +334,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="pb-4 mb-1">
       <h2 class="gallery-heading text-center">Sesje</h2>
       <div id="locations" class="carousel slide" data-bs-ride="carousel"
       data-bs-interval="5000">
